; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_llh_get_l2_affinity_hint.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_llh_get_l2_affinity_hint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_dev = type { i64 }

@ECORE_ENG1 = common dso_local global i32 0, align 4
@ECORE_ENG0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_llh_get_l2_affinity_hint(%struct.ecore_dev* %0) #0 {
  %2 = alloca %struct.ecore_dev*, align 8
  store %struct.ecore_dev* %0, %struct.ecore_dev** %2, align 8
  %3 = load %struct.ecore_dev*, %struct.ecore_dev** %2, align 8
  %4 = getelementptr inbounds %struct.ecore_dev, %struct.ecore_dev* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @ECORE_ENG1, align 4
  br label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @ECORE_ENG0, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i32 [ %8, %7 ], [ %10, %9 ]
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
